--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,6 +36,7 @@
 
 
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,300,800,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/font-awesome.min.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/normalize.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/nprogress.css">
