--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,13 +33,13 @@ Description: Awesome dude, awesome life
             <a href="#"><i class="fa fa-times"></i></a>
         </li>
 {% for link in site.links %}
-            <li>{% if link.external %}
+            <!--li>{% if link.external %}
             <a href="{{ link.url }}">{{ link.title }}</a>
             {% else %}
             <a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>
-            {% endif %} </li>
+            {% endif %} </li-->
 {% endfor %}            
-           <li><a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="icon-rss"></i> Feed</a></li>
+           <!--li><a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="icon-rss"></i> Feed</a></li-->
     </ul>
 </div>
         <div class="clearfix"></div>
